# kip

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  check.yml  ci.yml  safety.yml  test.yml
benches/: bench.rs
src/: args.rs  chunk.rs  cli.rs  compress.rs  conf.rs  crypto.rs  job.rs  job_pool.rs  lib.rs  main.rs  run.rs  s3.rs  smtp.rs
src/providers/: azure.rs  gdrive.rs  mod.rs  s3.rs  smb.rs  usb.rs
test/test_dir/: random4.txt
