[package]
name = "kip"
version = "0.1.3"
description = "The simple encrypted backups tool."
authors = ["Ryan Ciehanski <ryan@ciehanski.com>"]
repository = "https://github.com/ciehanski/kip"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
clap = { version = "3.2", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10"
uuid = { version = "1.1", features = ["serde", "v4"] }
directories = "4.0"
aws-config = "0.46"
aws-sdk-s3 = "0.16"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.56"
fastcdc = "1.0.6"
aead = "0.4.3"
chacha20poly1305 = "0.9.1"
crypto-hash = "0.3.4"
rust-argon2 = "1.0.0"
zeroize = "1.5.6"
async-compression = { version = "0.3.14", features = ["tokio", "zstd"] }
keyring = "1"
memmap2 = "0.5.4"
futures = "0.3"
rand = "0.8.5"
num_cpus = "1"
linya = "0.3"
pretty-bytes = "0.2"
prettytable-rs = "0.8"
colored = "2.0"
humantime = "2.1"
sysinfo = "0.25"
# pavao = "0.1.2"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.3"
assert_cmd = "2.0"

[lib]
name = "kip"
path = "src/lib.rs"

[[bin]]
name = "kip"
path = "src/bin/kip.rs"

[[bench]]
name = "bench"
harness = false
