[package]
name = "kip"
version = "0.1.5"
description = "The simple encrypted backups tool."
authors = ["Ryan Ciehanski <ryan@ciehanski.com>"]
repository = "https://github.com/ciehanski/kip"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
anyhow = "1.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
walkdir = "2"
clap = { version = "3.2", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
uuid = { version = "1.5", features = ["serde", "v4", "fast-rng"] }
directories = "4.0"
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.34.0"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
async-trait = "0.1.74"
fastcdc = { version = "3.1", features = ["tokio"] }
aead = "0.5.2"
chacha20poly1305 = "0.10.1"
crypto-hash = "0.3.4"
rust-argon2 = "2.0.0"
zeroize = "1.6"
async-compression = { version = "0.4.1", features = ["tokio", "zstd", "gzip", "lzma", "brotli"] }
keyring = "2.0"
memmap2 = "0.9.0"
futures = "0.3"
rand = "0.8.5"
num_cpus = "1"
linya = { git = "https://github.com/ciehanski/linya", branch = "master" }
pretty-bytes = "0.2"
comfy-table = "7"
colored = "2.0"
humantime = "2.1"
sysinfo = "0.26"
google-drive3 = "4.0.4"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
tera = "1.17"
battery = "0.7.8"
notify-rust = "4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3"
assert_cmd = "2.0"

[lib]
name = "kip"
path = "src/lib.rs"

[[bin]]
name = "kip"
path = "src/bin/kip.rs"

[[bench]]
name = "bench"
harness = false
